// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`快照正确渲染 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "white",
      "flex": 1,
    }
  }
  testID={undefined}
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    collapsable={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "height": 30,
        "marginLeft": 15,
        "marginTop": 30,
        "opacity": 1,
        "width": 30,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <Image
      source={1}
    />
  </View>
  <Image
    source={1}
    style={
      Array [
        Object {
          "alignSelf": "center",
          "borderColor": "#f9f9f9",
          "borderWidth": 0,
          "height": 64,
          "resizeMode": "contain",
          "width": 180,
        },
        Object {
          "marginTop": 10,
        },
      ]
    }
  />
  <View
    keyboardVerticalOffset={0}
    onLayout={[Function]}
    style={
      Array [
        Array [
          Object {
            "flex": 1,
            "justifyContent": "flex-start",
            "paddingTop": 0,
          },
          Object {
            "backgroundColor": "white",
          },
        ],
        Object {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "height": 40,
        }
      }
    />
    <Image
      source={1}
      style={
        Array [
          Object {
            "alignSelf": "center",
          },
          Object {
            "justifyContent": "center",
          },
        ]
      }
    />
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "backgroundColor": "#ef0c35",
            "borderRadius": 22,
            "borderWidth": 0,
            "flexDirection": "row",
            "height": 44,
            "justifyContent": "center",
            "margin": 0,
            "marginTop": 0,
            "width": 300,
          },
          Object {
            "marginTop": 50,
          },
        ]
      }
      testID={undefined}
    >
      <Image
        source={1}
        style={
          Array [
            Object {
              "alignSelf": "center",
              "resizeMode": "contain",
            },
            Object {
              "justifyContent": "flex-start",
            },
          ]
        }
      />
      <Text
        accessible={true}
        allowFontScaling={false}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "alignSelf": "center",
              "color": "#FFFFFF",
              "fontSize": 15,
              "marginBottom": 10,
              "marginLeft": 5,
              "marginTop": 10,
              "textAlign": "center",
            },
          ]
        }
      >
        微信登录
      </Text>
    </View>
  </View>
</View>
`;

exports[`快照正确渲染 2`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  mobile="12345678000"
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "white",
      "flex": 1,
    }
  }
  testID={undefined}
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    collapsable={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "height": 30,
        "marginLeft": 15,
        "marginTop": 30,
        "opacity": 1,
        "width": 30,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <Image
      source={1}
    />
  </View>
  <Image
    source={1}
    style={
      Array [
        Object {
          "alignSelf": "center",
          "borderColor": "#f9f9f9",
          "borderWidth": 0,
          "height": 64,
          "resizeMode": "contain",
          "width": 180,
        },
        Object {
          "marginTop": 10,
        },
      ]
    }
  />
  <View
    keyboardVerticalOffset={0}
    onLayout={[Function]}
    style={
      Array [
        Array [
          Object {
            "flex": 1,
            "justifyContent": "flex-start",
            "paddingTop": 0,
          },
          Object {
            "backgroundColor": "white",
          },
        ],
        Object {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "height": 40,
        }
      }
    />
    <Image
      source={1}
      style={
        Array [
          Object {
            "alignSelf": "center",
          },
          Object {
            "justifyContent": "center",
          },
        ]
      }
    />
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "backgroundColor": "#ef0c35",
            "borderRadius": 22,
            "borderWidth": 0,
            "flexDirection": "row",
            "height": 44,
            "justifyContent": "center",
            "margin": 0,
            "marginTop": 0,
            "width": 300,
          },
          Object {
            "marginTop": 50,
          },
        ]
      }
      testID={undefined}
    >
      <Image
        source={1}
        style={
          Array [
            Object {
              "alignSelf": "center",
              "resizeMode": "contain",
            },
            Object {
              "justifyContent": "flex-start",
            },
          ]
        }
      />
      <Text
        accessible={true}
        allowFontScaling={false}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "alignSelf": "center",
              "color": "#FFFFFF",
              "fontSize": 15,
              "marginBottom": 10,
              "marginLeft": 5,
              "marginTop": 10,
              "textAlign": "center",
            },
          ]
        }
      >
        微信登录
      </Text>
    </View>
  </View>
</View>
`;
